--- a/debian/control
+++ b/debian/control
@@ -16,3 +16,6 @@ Description: database of mobile broadband service providers
  broadband providers in different countries. Its functioning through Network 
  Manager makes it easy for users to choose their mobile broadband service 
  provider.
+ .
+ The database contains information relevant to mobile networks access point
+ usage, such as APN (access point name), username, password, etc.
