--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,9 @@ Priority: optional
 Maintainer: Bhavani Shankar <bhavi@ubuntu.com>
 Uploaders: Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>,
            Antti Kaijanmäki <antti.kaijanmaki@canonical.com>
-Build-Depends: debhelper (>= 9), libxml2-utils
+Build-Depends: debhelper (>= 9),
+               dh-autoreconf,
+               libxml2-utils
 Standards-Version: 3.9.5
 Homepage: https://wiki.gnome.org/Projects/NetworkManager/MobileBroadband/ServiceProviders
 
