--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,7 @@ Source: mobile-broadband-provider-info
 Section: admin
 Priority: optional
 Maintainer: Graham Inggs <ginggs@debian.org>
-Build-Depends: debhelper (>= 9),
-               dh-autoreconf,
+Build-Depends: debhelper-compat (= 12),
                libxml2-utils
 Standards-Version: 4.1.0
 Homepage: https://wiki.gnome.org/Projects/NetworkManager/MobileBroadband/ServiceProviders
