Add build dependency on xsltproc, upload to unstable

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: admin
 Priority: optional
 Maintainer: Graham Inggs <ginggs@debian.org>
 Build-Depends: debhelper-compat (= 12),
-               libxml2-utils
+               libxml2-utils,
+               xsltproc
 Standards-Version: 4.4.0
 Rules-Requires-Root: no
 Homepage: https://wiki.gnome.org/Projects/NetworkManager/MobileBroadband/ServiceProviders
